--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "me.androidbox.travelmate"
-        minSdkVersion 19
-        targetSdkVersion 23
+        minSdkVersion 17
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -22,8 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:support-v13:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
+
+    def version = "24.1.1"
+    compile 'com.android.support:design:' + version
+    compile 'com.android.support:appcompat-v7:' + version
+    compile 'com.android.support:support-v13:' + version
+    compile 'com.android.support:cardview-v7:' + version
 }
